--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,9 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: mysql2
+  database: coupon
+  username: coupon_rw
+  password: w4Ds5j0sYR39TJe8
   pool: 5
   timeout: 5000
