--- a/config/database.yml
+++ b/config/database.yml
@@ -16,9 +16,7 @@ test:
   timeout: 5000
 
 production:
-  adapter: mysql2
-  database: coupon
-  username: coupon_rw
-  password: w4Ds5j0sYR39TJe8
+  adapter: sqlite3
+  database: db/production.sqlite3
   pool: 5
   timeout: 5000
